osh/openstack/09-cinder/manifests/cinder/templates/deployment-backup.yaml
---
# Source: cinder/templates/deployment-backup.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: cinder-backup
  annotations:
    "openstackhelm.openstack.org/release_uuid": ""
  labels:
    release_group: cinder
    application: cinder
    component: backup
spec:
  replicas: 1
  selector:
    matchLabels:
      release_group: cinder
      application: cinder
      component: backup
  revisionHistoryLimit: 3
  strategy:
    type: RollingUpdate
    rollingUpdate:
      maxUnavailable: 1
      maxSurge: 3
  template:
    metadata:
      labels:
        release_group: cinder
        application: cinder
        component: backup
      annotations:
        "openstackhelm.openstack.org/release_uuid": ""
        configmap-bin-hash: "8c5986eba572d31613bd599cd0c2e58534fe29e89347669524ab59ddb7631397"
        configmap-etc-hash: "3ba5889b7ca5cd0f6b8e74b17eec282eb38cf40a4073234766e580b3c9f4ebb2"
        
    spec:
      serviceAccountName: cinder-backup
      securityContext:
        runAsUser: 42424
      affinity:
        
        podAntiAffinity:
          preferredDuringSchedulingIgnoredDuringExecution:
          - podAffinityTerm:
              labelSelector:
                matchExpressions:
                  - key: release_group
                    operator: In
                    values:
                    - cinder
                  - key: application
                    operator: In
                    values:
                    - cinder
                  - key: component
                    operator: In
                    values:
                    - backup
              topologyKey: kubernetes.io/hostname
            weight: 10

      nodeSelector:
        openstack-control-plane: enabled
      hostNetwork: true
      dnsPolicy: ClusterFirstWithHostNet
      containers:
        - name: cinder-backup
          image: "docker.io/openstackhelm/cinder:2023.1-ubuntu_jammy"
          imagePullPolicy: IfNotPresent
          resources:
            null
          
          securityContext:
            capabilities:
              add:
              - SYS_ADMIN
            privileged: true
            readOnlyRootFilesystem: true
            runAsUser: 0
          command:
            - /tmp/cinder-backup.sh
          terminationMessagePath: /var/log/termination-log
          volumeMounts:
            - name: pod-tmp
              mountPath: /tmp
            - name: cinder-tmp
              mountPath: /var/lib/cinder/tmp
            - name: cinder-bin
              mountPath: /tmp/cinder-backup.sh
              subPath: cinder-backup.sh
              readOnly: true
            - name: cinder-etc
              mountPath: /etc/cinder/cinder.conf
              subPath: cinder.conf
              readOnly: true
            - name: cinder-etc
              mountPath: /etc/cinder/logging.conf
              subPath: logging.conf
              readOnly: true
            
            - name: etcceph
              mountPath: /etc/ceph
            - name: ceph-etc
              mountPath: /etc/ceph/ceph.conf
              subPath: ceph.conf
              readOnly: true
            - name: ceph-keyring
              mountPath: /tmp/client-keyring
              subPath: key
              readOnly: true
            - name: cinder-coordination
              mountPath: /var/lib/cinder/coordination
            - name: cinder-etc
              # NOTE (Portdirect): We mount here to override Kollas
              # custom sudoers file when using Kolla images, this
              # location will also work fine for other images.
              mountPath: /etc/sudoers.d/kolla_cinder_sudoers
              subPath: cinder_sudoers
              readOnly: true
            - name: cinder-etc
              mountPath: /etc/sudoers.d/kolla_cinder_volume_sudoers
              subPath: cinder_sudoers
              readOnly: true
            - name: cinder-etc
              mountPath: /etc/cinder/rootwrap.conf
              subPath: rootwrap.conf
              readOnly: true
            - name: cinder-etc
              mountPath: /etc/cinder/rootwrap.d/volume.filters
              subPath: volume.filters
              readOnly: true                        

      volumes:
        - name: pod-tmp
          emptyDir: {}
        - name: cinder-tmp
          emptyDir: {}
        - name: cinder-etc
          secret:
            secretName: cinder-etc
            defaultMode: 0444
        - name: cinder-bin
          configMap:
            name: cinder-bin
            defaultMode: 0555
        
        - name: etcceph
          emptyDir: {}
        - name: ceph-etc
          configMap:
            name: ceph-etc
            defaultMode: 0444
        
        - name: ceph-keyring
          secret:
            secretName: "rbd-client1"
        
        # NOTE (portdirect): this will need to be set to a shared mount amongst all cinder
        # pods for the coordination backend to be fully functional.
        - name: cinder-coordination
          emptyDir: {}
