osh/openstack/09-cinder/manifests/cinder/templates/deployment-scheduler.yaml
---
# Source: cinder/templates/deployment-scheduler.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: cinder-scheduler
  annotations:
    "openstackhelm.openstack.org/release_uuid": ""
  labels:
    release_group: cinder
    application: cinder
    component: scheduler
spec:
  replicas: 3
  selector:
    matchLabels:
      release_group: cinder
      application: cinder
      component: scheduler
  revisionHistoryLimit: 3
  strategy:
    type: RollingUpdate
    rollingUpdate:
      maxUnavailable: 1
      maxSurge: 3
  template:
    metadata:
      labels:
        release_group: cinder
        application: cinder
        component: scheduler
      annotations:
        "openstackhelm.openstack.org/release_uuid": ""
        configmap-bin-hash: "8c5986eba572d31613bd599cd0c2e58534fe29e89347669524ab59ddb7631397"
        configmap-etc-hash: "3ba5889b7ca5cd0f6b8e74b17eec282eb38cf40a4073234766e580b3c9f4ebb2"
        
    spec:
      serviceAccountName: cinder-scheduler
      securityContext:
        runAsUser: 42424
      affinity:
        
        podAntiAffinity:
          preferredDuringSchedulingIgnoredDuringExecution:
          - podAffinityTerm:
              labelSelector:
                matchExpressions:
                  - key: release_group
                    operator: In
                    values:
                    - cinder
                  - key: application
                    operator: In
                    values:
                    - cinder
                  - key: component
                    operator: In
                    values:
                    - scheduler
              topologyKey: kubernetes.io/hostname
            weight: 10

      nodeSelector:
        openstack-control-plane: enabled
      containers:
        - name: cinder-scheduler
          image: "docker.io/openstackhelm/cinder:2023.1-ubuntu_jammy"
          imagePullPolicy: IfNotPresent
          resources:
            limits:
              cpu: 2000m
              memory: 1024Mi
            requests:
              cpu: 100m
              memory: 128Mi
          
          securityContext:
            allowPrivilegeEscalation: false
            readOnlyRootFilesystem: true
          command:
            - /tmp/cinder-scheduler.sh
          volumeMounts:
            - name: pod-tmp
              mountPath: /tmp
            - name: cinder-bin
              mountPath: /tmp/cinder-scheduler.sh
              subPath: cinder-scheduler.sh
              readOnly: true
            - name: cinder-etc
              mountPath: /etc/cinder/cinder.conf
              subPath: cinder.conf
              readOnly: true
            - name: cinder-etc
              mountPath: /etc/cinder/logging.conf
              subPath: logging.conf
              readOnly: true
            - name: cinder-etc
              mountPath: /etc/cinder/api-paste.ini
              subPath: api-paste.ini
              readOnly: true
            - name: cinder-etc
              mountPath: /etc/cinder/policy.yaml
              subPath: policy.yaml
              readOnly: true
            - name: cinder-coordination
              mountPath: /var/lib/cinder/coordination                                    

      volumes:
        - name: pod-tmp
          emptyDir: {}
        - name: cinder-bin
          configMap:
            name: cinder-bin
            defaultMode: 0555
        - name: cinder-etc
          secret:
            secretName: cinder-etc
            defaultMode: 0444
        # NOTE (portdirect): this will need to be set to a shared mount amongst all cinder
        # pods for the coordination backend to be fully functional.
        - name: cinder-coordination
          emptyDir: {}
