osh/openstack/09-cinder/manifests/cinder/templates/service-ingress-api.yaml
---
# Source: cinder/templates/service-ingress-api.yaml
apiVersion: v1
kind: Service
metadata:
  name: cinder
spec:
  ports:
    - name: http
      port: 80
    - name: https
      port: 443
  selector:
    app: ingress-api
