osh/openstack/09-cinder/manifests/cinder/templates/ingress-api.yaml
---
# Source: cinder/templates/ingress-api.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: cinder
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  ingressClassName: "nginx"
  rules:
    - host: cinder
      http:
        paths:
          - path: /
            pathType: ImplementationSpecific
            backend:
              service:
                name: cinder-api
                port:
                  name: "c-api"
    - host: cinder.openstack
      http:
        paths:
          - path: /
            pathType: ImplementationSpecific
            backend:
              service:
                name: cinder-api
                port:
                  name: "c-api"
    - host: cinder.openstack.svc.cluster.local
      http:
        paths:
          - path: /
            pathType: ImplementationSpecific
            backend:
              service:
                name: cinder-api
                port:
                  name: "c-api"
---
# Source: cinder/templates/ingress-api.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: cinder-namespace-fqdn
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  ingressClassName: "nginx"
  rules:
    - host: cinder-api.pbandark.com
      http:
        paths:
          - path: /
            pathType: ImplementationSpecific
            backend:
              service:
                name: cinder-api
                port:
                  name: "c-api"
---
# Source: cinder/templates/ingress-api.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: cinder-cluster-fqdn
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  ingressClassName: "rackspace-nginx"
  rules:
    - host: cinder-api.pbandark.com
      http:
        paths:
          - path: /
            pathType: ImplementationSpecific
            backend:
              service:
                name: cinder-api
                port:
                  name: "c-api"
